Separated Jewel_Type from Gem to file jewel.xsd

--- a/src/gem.html
+++ b/src/gem.html
@@ -1,4 +1,4 @@
-<html xmlns:t="gem_xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<html xmlns:j="jewel_xsd" xmlns:g="gem_xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>HTML GEM</title>
